--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2018 Git.Training eMinds
 -->
 <head>
-	<title>An Example Website</title>
+	<title>A Very Respectul Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +17,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Non sno sicuro di cosa sarà qui , ma sono sicuro che sarà bello 
 		</p>
 	</main>
 	<footer class="container">
