mb before rebase conflicts

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2018 Git.Training eMinds
+	Adding changing for rebasing conflict 
 -->
 <head>
 	<title>A Great  Website</title>
