--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	Silly changes from master branch  
 -->
 <head>
-	<title>Silly on MAster </title>
+	<title>Lots of Trouble</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,10 +16,9 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Junk Filler content  -->
+	<!-- Content Goes Here -->
 		<p>
-			Just stuff for now,
-				Not shure if we should replace this or not 
+			Just but trouble 
 		</p>
 	</main>
 	<footer class="container">
