--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2018 Git.Training eMinds
-	Adding changing for rebasing conflict 
+	Silly changes from master branch  
 -->
 <head>
-	<title>A Great  Website</title>
+	<title>Silly on MAster </title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,9 +16,10 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- Junk Filler content  -->
 		<p>
-			Just some content
+			Just stuff for now,
+				Not shure if we should replace this or not 
 		</p>
 	</main>
 	<footer class="container">
