--- a/simple.html
+++ b/simple.html
@@ -22,6 +22,7 @@
 		</p>
 	</main>
 	<footer class="container">
+	<p>&copy 2014GIt .Training , All Right reserved  </p>
 	</footer>
 </body>
 </html>
