--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	Silly changes from master branch  
 -->
 <head>
-	<title>Updating Title for Branch Stash </title>
+	<title>Updating for Tagging Stash </title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
